Outline items which contain characters “ ” ‘ ’ are not shown correctly
It seems the function that parse text for Outline items needs to add support for those, because the only two Outline items that show garbage text in the reproducer pdf are the ones that contain those not-so-common characters. They are in the pages 14 and 31.
Reproducer PDF: INDICE2020-03-23.pdf