Make TextStringToUCS4() support UTF16-LE too

UTF16-LE strings can 'de facto' appear on pdf's
(eg. title of Outline items) and Acrobat display
them fine, so let's support that so we don't
show an ugly 'ÿþ' at start of the text (Okular)
or even no text at all (Evince).

Issue #941

Evince issue:
https://gitlab.gnome.org/GNOME/evince/-/issues/1444